packages/@aws-cdk-testing/framework-integ/test/aws-route53/test/integ.route53.js.snapshot/aws-cdk-route53-integ.template.json
{
 "Resources": {
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC"
     }
    ]
   }
  },
  "VPCPublicSubnet1SubnetB4246D30": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/17",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCPublicSubnet1RouteTableFEE4B781": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCPublicSubnet1RouteTableAssociation0B0896DC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    }
   }
  },
  "VPCPublicSubnet1DefaultRoute91CEF279": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ]
  },
  "VPCPublicSubnet1EIP6AD938E8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PublicSubnet1"
     }
    ]
   }
  },
  "VPCPublicSubnet1NATGatewayE0556630": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCPublicSubnet1EIP6AD938E8",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VPCPublicSubnet1DefaultRoute91CEF279",
    "VPCPublicSubnet1RouteTableAssociation0B0896DC"
   ]
  },
  "VPCPrivateSubnet1Subnet8BCA10E0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/17",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCPrivateSubnet1RouteTableBE8A6027": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCPrivateSubnet1RouteTableAssociation347902D1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
    }
   }
  },
  "VPCPrivateSubnet1DefaultRouteAE1D6490": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet1NATGatewayE0556630"
    },
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    }
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-route53-integ/VPC"
     }
    ]
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "PrivateZone27242E85": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "cdk.local.",
    "VPCs": [
     {
      "VPCId": {
       "Ref": "VPCB9E5F0B4"
      },
      "VPCRegion": {
       "Ref": "AWS::Region"
      }
     }
    ]
   }
  },
  "PrivateZoneTXT83BB83CE": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "_foo.cdk.local.",
    "ResourceRecords": [
     "\"Bar!\"",
     "\"Baz?\""
    ],
    "TTL": "60",
    "Type": "TXT"
   }
  },
  "PublicZone2E1C4E34": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "cdk.test."
   }
  },
  "PublicZonecdktestsubcdktest83558650": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PublicZone2E1C4E34"
    },
    "Name": "sub.cdk.test.",
    "ResourceRecords": {
     "Fn::GetAtt": [
      "PublicSubZoneDBD26A0A",
      "NameServers"
     ]
    },
    "TTL": "172800",
    "Type": "NS"
   }
  },
  "PublicSubZoneDBD26A0A": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "sub.cdk.test."
   }
  },
  "PublicZoneWithDotAE1455DD": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "cdk.test"
   }
  },
  "CNAMEC70A2D52": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "www.cdk.local.",
    "ResourceRecords": [
     "server"
    ],
    "TTL": "1800",
    "Type": "CNAME"
   }
  },
  "ACCC8ACD5": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "test.cdk.local.",
    "ResourceRecords": [
     "1.2.3.4",
     "5.6.7.8"
    ],
    "TTL": "1800",
    "Type": "A"
   }
  },
  "GeoLocationContinentAEA331ED": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "GeoLocation": {
     "ContinentCode": "EU"
    },
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "geolocation.cdk.local.",
    "ResourceRecords": [
     "1.2.3.0",
     "5.6.7.0"
    ],
    "SetIdentifier": "GEO_CONTINENT_EU",
    "TTL": "1800",
    "Type": "A"
   }
  },
  "GeoLocationCountry523431F6": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "GeoLocation": {
     "CountryCode": "DE"
    },
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "geolocation.cdk.local.",
    "ResourceRecords": [
     "1.2.3.1",
     "5.6.7.1"
    ],
    "SetIdentifier": "GEO_COUNTRY_DE",
    "TTL": "1800",
    "Type": "A"
   }
  },
  "GeoLocationSubDividion2CB12CFC": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "GeoLocation": {
     "CountryCode": "US",
     "SubdivisionCode": "WA"
    },
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "geolocation.cdk.local.",
    "ResourceRecords": [
     "1.2.3.2",
     "5.6.7.2"
    ],
    "SetIdentifier": "GEO_COUNTRY_US_SUBDIVISION_WA",
    "TTL": "1800",
    "Type": "A"
   }
  },
  "GeoLocationDefaultF2DE9058": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "GeoLocation": {
     "CountryCode": "*"
    },
    "HostedZoneId": {
     "Ref": "PrivateZone27242E85"
    },
    "Name": "geolocation.cdk.local.",
    "ResourceRecords": [
     "1.2.3.3",
     "5.6.7.3"
    ],
    "SetIdentifier": "GEO_COUNTRY_*",
    "TTL": "1800",
    "Type": "A"
   }
  },
  "CaaAmazon40DF725F": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PublicZone2E1C4E34"
    },
    "Name": "cdk.test.",
    "ResourceRecords": [
     "0 issue \"amazon.com\""
    ],
    "TTL": "1800",
    "Type": "CAA"
   }
  },
  "TXT0D5C5ACF": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "PublicZone2E1C4E34"
    },
    "Name": "cdk.test.",
    "ResourceRecords": [
     "\"this is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long stringthis is a very long s\"\"tring\""
    ],
    "TTL": "1800",
    "Type": "TXT"
   }
  }
 },
 "Outputs": {
  "PrivateZoneId": {
   "Value": {
    "Ref": "PrivateZone27242E85"
   }
  },
  "PublicZoneId": {
   "Value": {
    "Ref": "PublicZone2E1C4E34"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
